format all files

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,6 @@
 ---
-
 ---
+
 <header aria-label="Site Header" class="bg-white">
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-48 items-center justify-between">
@@ -13,39 +13,29 @@
 
       <div class="md:flex-2 md:items-center md:gap-12">
         <nav aria-label="Site Nav" class="hidden md:block">
-          <ul class="flex justify-between gap-24 text-2xl font-base font-bold uppercase">
+          <ul
+            class="flex justify-between gap-24 text-2xl font-base font-bold uppercase"
+          >
             <li>
-              <a
-                class="text-black transition hover:text-#F1FA43/75"
-                href="/"
-              >
+              <a class="text-black transition hover:text-#F1FA43/75" href="/">
                 About
               </a>
             </li>
 
             <li>
-              <a
-                class="text-black transition hover:text-#FF7DB8/75"
-                href="/"
-              >
+              <a class="text-black transition hover:text-#FF7DB8/75" href="/">
                 Portfolio
               </a>
             </li>
 
             <li>
-              <a
-                class="text-black transition hover:text-#3DBFAF/75"
-                href="/"
-              >
+              <a class="text-black transition hover:text-#3DBFAF/75" href="/">
                 Services
               </a>
             </li>
 
             <li>
-              <a
-                class="text-black transition hover:text-#EC291C/75"
-                href="/"
-              >
+              <a class="text-black transition hover:text-#EC291C/75" href="/">
                 Contact
               </a>
             </li>
@@ -68,8 +58,7 @@
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M4 6h16M4 12h16M4 18h16"
-                />
+                  d="M4 6h16M4 12h16M4 18h16"></path>
               </svg>
             </button>
           </div>
