add responsive text sizing to navbar

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,48 +4,48 @@
 <header aria-label="Site Header" class="bg-white">
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-48 items-center justify-between">
-      <div class="flex-1 md:flex md:items-center md:gap-12">
+      <div class="flex-1 basis-80 mr-18 md:flex md:items-center">
         <a class="block text-teal-600" href="/">
           <span class="sr-only">Home</span>
           <img src="/logo.png" />
         </a>
       </div>
 
-      <div class="md:flex-2 md:items-center md:gap-12">
+      <div class="flex-auto md:gap-12 md:items-center md:gap-24">
         <nav aria-label="Site Nav" class="hidden md:block">
           <ul
-            class="flex justify-between gap-24 text-2xl font-base font-bold uppercase"
+            class="flex justify-between gap-8 md:text-[2.3vw] lg:text-2xl font-base font-bold uppercase"
           >
             <li>
-              <a class="text-black transition hover:text-#F1FA43/75" href="/">
+              <a class="text-black transition hover:bg-#F1FA43 p-1" href="/">
                 About
               </a>
             </li>
 
             <li>
-              <a class="text-black transition hover:text-#FF7DB8/75" href="/">
+              <a class="text-black transition hover:bg-#FF7DB8 p-1" href="/">
                 Portfolio
               </a>
             </li>
 
             <li>
-              <a class="text-black transition hover:text-#3DBFAF/75" href="/">
+              <a class="text-black transition hover:bg-#3DBFAF p-1" href="/">
                 Services
               </a>
             </li>
 
             <li>
-              <a class="text-black transition hover:text-#EC291C/75" href="/">
+              <a class="text-black transition hover:bg-#EC291C p-1" href="/">
                 Contact
               </a>
             </li>
           </ul>
         </nav>
 
-        <div class="flex items-center gap-4">
+        <div class="flex items-center justify-end">
           <div class="block md:hidden">
             <button
-              class="rounded bg-gray-100 p-2 text-gray-600 transition hover:text-gray-600/75"
+              class="rounded bg-gray-100 p-3 mr-12 text-gray-600 transition hover:text-gray-600/75"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
