--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Nav from '../components/Nav.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <html lang="en">
@@ -12,5 +13,9 @@ import Nav from '../components/Nav.astro'
 	</head>
 	<body>
 		<Nav />
+		<div class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white">
+
+		</div>
+		<Footer />
 	</body>
 </html>
