update syntax for arbitrary values

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -38,7 +38,7 @@ const navItems = [
               navItems.map((item) => (
                 <li>
                   <a
-                    class={`text-black transition hover:bg-${item.color} p-1`}
+                    class={`text-black transition hover:bg-[${item.color}] p-1`}
                     href={"/" + item.label.toLowerCase()}
                   >
                     {item.label}
