--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,19 +1,26 @@
 ---
-import Nav from '../components/Nav.astro'
-import Footer from '../components/Footer.astro'
+import { SEO } from "astro-seo";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Brielle French Design</title>
-	</head>
-	<body>
-		<Nav />
-		<slot />
-		<Footer />
-	</body>
+  <head>
+    <SEO
+      title={title}
+      titleTemplate="%s - Brielle French Design"
+      titleDefault="Brielle French Design"
+      description={description}
+    />
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+  </head>
+  <body>
+    <Nav />
+    <slot />
+    <Footer />
+  </body>
 </html>
