feat: home change

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,19 @@
 ---
+import { Image } from "astro:assets";
 import Base from "../layouts/Base.astro";
+import Logo from "../assets/logo-big.png";
 ---
 
 <Base>
-  <main class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white"></main>
+  <main class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white">
+    <div class="flex h-full justify-center items-center px-10">
+      <p class="font-bold text-right leading-20 text-5xl sm:md:text-8xl sm:md:leading-30">
+        Invest in <br />design.
+      </p>
+
+      <div class="ml-[-200px] z-[-1]">
+        <Image src={Logo.src} width={700} height={100} alt="logo image" />
+      </div>
+    </div>
+  </main>
 </Base>
