--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,10 @@ import Logo from "../assets/logo-big.png";
 <Base>
   <main class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white">
     <div class="flex h-full justify-center items-center px-10">
-      <p class="font-bold text-right leading-20 text-5xl sm:md:text-8xl sm:md:leading-30">
-        Invest in <br />design.
+      <p
+        class="font-bold text-right leading-20 text-5xl sm:md:text-8xl sm:md:leading-30"
+      >
+        Invest in <br /><div class="slot-machine"></div>.
       </p>
 
       <div class="ml-[-200px] z-[-1]">
@@ -17,3 +19,55 @@ import Logo from "../assets/logo-big.png";
     </div>
   </main>
 </Base>
+
+<script>
+  import { SlotMachineEffect } from "../lib/slotMachineEffect";
+  const slotMachineTextList = [
+    "brand identity",
+    "social media content",
+    "event marketing",
+    "business cards",
+    "cover design",
+  ];
+
+  const machine = new SlotMachineEffect({
+    wordList: slotMachineTextList,
+    container: document.querySelector("div.slot-machine") as HTMLElement,
+    minItemsToPassBy: 2,
+    maxItemsToPassBy: 4,
+  });
+
+  machine.attach();
+</script>
+
+<style>
+  .slot-machine {
+    margin: 0px auto;
+    width: 700px;
+    margin-top: 50px;
+    z-index: -10;
+  }
+
+  .slot-machine--mask {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    margin-bottom: -40px;
+  }
+
+  .slot-machine--items-container {
+    position: absolute;
+    top: 0px;
+    transition: all, 0.5s, cubic-bezier(0.02, 0.01, 0.47, 1);
+  }
+
+  .slot-machine--item {
+    min-height: 150px;
+    max-height: 150px;
+    margin: 0px;
+    padding: 0px;
+    background-size: contain;
+  }
+</style>
