--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Logo from "../assets/logo-big.png";
       <div
         class="font-bold font-base text-right leading-20 text-5xl sm:md:text-8xl sm:md:leading-30"
       >
-        <div class="mt-6">Invest in</div>
+        <div class="mt-24">Invest in</div>
         <div class="flex items-end">
           <div class="slot-machine">
             <div id="design">design</div>
@@ -79,10 +79,11 @@ import Logo from "../assets/logo-big.png";
 
   .slot-machine--mask {
     width: 100%;
-    height: 250px;
+    height: 400px;
     overflow: hidden;
     position: relative;
     display: inline-block;
+    margin-bottom: -40px;
   }
 
   .slot-machine--items-container {
@@ -93,13 +94,10 @@ import Logo from "../assets/logo-big.png";
   }
 
   .slot-machine--item {
-    min-height: 250px;
-    max-height: 250px;
-    display: flex;
-    align-items: center;
+    min-height: 400px;
+    max-height: 400px;
     margin: 0px;
     padding: 0px;
     background-size: contain;
-    justify-content: end;
   }
 </style>
