--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,16 +6,16 @@ import Logo from "../assets/logo-big.png";
 
 <Base>
   <main class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white">
-    <div class="grid h-full px-10 text-right">
-      <div class="h-full flex items-center justify-center lg:w-auto lg:ml-[-200px] z-[-100]">
+    <div class="grid md:grid-cols-10 h-full px-10 justify-center">
+      <div class="h-full flex items-center justify-center md:row-start-1 md:col-start-4 md:col-end--1 lg:w-auto lg:ml-[-200px] z-[-100]">
         <!-- Image is purely decorative, no alt tag needed -->
-        <Image src={Logo} alt="" class="sm:w-4/5" />
+        <Image src={Logo} alt="" class="md:max-w-200 sm:w-4/5 md:w-full" />
       </div>
       <div
-        class="h-full lg:flex lg:flex-col lg:items-end justify-center font-bold font-base text-left text-5xl sm:text-6xl leading-16 md:text-7xl lg:text-8xl lg:leading-30"
+        class="h-full md:row-start-1 md:col-start-1 md:col-end-6 md:flex md:flex-col md:items-end justify-center font-bold font-base text-left md:text-right text-5xl sm:text-6xl leading-16 md:text-7xl lg:text-8xl lg:leading-30"
       >
         <div class="md:mt-24 block">Invest in</div>
-        <div class="flex items-end">
+        <div class="md:w-full flex items-end">
           <div class="slot-machine">
             <div id="design" class="mb-66.25">design</div>
           </div>
@@ -61,25 +61,23 @@ import Logo from "../assets/logo-big.png";
 
   .slot-machine--mask {
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     overflow: hidden;
     position: relative;
     display: inline-block;
     margin-bottom: -40px;
+    @apply h-50 md:h-100
   }
 
   .slot-machine--items-container {
-    position: absolute;
-    top: 0px;
-    /* right: 0px; */
     transition: all, 0.5s, cubic-bezier(0.02, 0.01, 0.47, 1);
+    @apply absolute top-0 md:right-0
   }
 
   .slot-machine--item {
-    min-height: 200px;
-    max-height: 200px;
     margin: 0px;
     padding: 0px;
     background-size: contain;
+    @apply h-50 md:h-100
   }
 </style>
