--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,20 @@
 ---
-
 ---
 
-<footer aria-label="Site Footer" class="bg-gray-200 w-full fixed bottom-0 h-36">
+<footer aria-label="Site Footer" class="fixed bottom-0 h-36 w-full bg-gray-200">
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between">
-      <p class="flex-1 mt-4 text-center text-sm sm:text-base text-black">
+      <p class="mt-4 flex-1 text-center text-sm text-black sm:text-base">
         &copy; 2023 Brielle French. All rights reserved.
-        <br>
-        Built by <a href="https://arimgibson.com" class="underline">Ari Gibson</a> | Design by Brielle French
-        <br>
-        Open Source on <a href="https://github.com/ari-gibson-consulting-llc-client-sites" class="underline">GitHub</a>
+        <br />
+        Built by <a href="https://arimgibson.com" class="underline"
+          >Ari Gibson</a
+        > | Design by Brielle French
+        <br />
+        Open Source on <a
+          href="https://github.com/ari-gibson-consulting-llc-client-sites"
+          class="underline">GitHub</a
+        >
       </p>
     </div>
   </div>
