--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,5 +3,5 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="h-[calc(100vh-12rem)] block mb-36 z-10 relative bg-white"></main>
+  <main class="relative z-10 mb-36 block h-[calc(100vh-12rem)] bg-white"></main>
 </Base>
