--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,38 @@
 ---
+import { Image } from "astro:assets";
 import Base from "../layouts/Base.astro";
+import Headshot from "../assets/about-headshot.png";
+import Logo from "../assets/about-logo.png";
 ---
 
 <Base>
-  <main class="relative z-10 mb-36 block h-[calc(100vh-12rem)] bg-white"></main>
+  <main
+    class="relative z-10 mb-36 grid lg:grid-cols-3 lg:pl-28 xl:pl-1/5 min-h-[calc(100vh-12rem)] lg:pr-0 bg-white px-10"
+  >
+    <div class="font-base lg:mt-32 lg:row-start-1 lg:col-start-1 lg:col-end-2">
+      <h2 class="color-[#FF7DB8] mt-auto pb-12 text-6xl sm:text-8xl font-bold">
+        Hello!
+      </h2>
+      <p class="w-full leading-snug text-md sm:text-lg">
+        I'm Brielle French. This is information about me. This is my design
+        experience. These are my areas of interest. This is my philosophy and
+        approach to design. This is a little bit of information about my
+        personal life so you can get to know me as a person.
+      </p>
+    </div>
+    <div
+      class="grid h-full items-end justify-items-end xl:row-start-1 col-start-2 col-end--1 xl:col-end--1 w-full"
+    >
+      <Image
+        src={Headshot}
+        alt="Brielle French"
+        class="lg:max-h-256 row-start-1 row-end--1 col-start-1 col-end--1"
+      />
+      <Image
+        src={Logo}
+        alt=""
+        class="lg:max-h-256 row-start-1 row-end--1 col-start-1 col-end--1 -z-20"
+      />
+    </div>
+  </main>
 </Base>
