move to gray text, better readability

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Logo from "../assets/about-logo.png";
   <main
     class="relative z-10 mb-36 grid lg:grid-cols-3 lg:pl-28 xl:pl-1/5 min-h-[calc(100vh-12rem)] lg:pr-0 bg-white px-10"
   >
-    <article class="font-base lg:mt-32 lg:row-start-1 lg:col-start-1 lg:col-end-2">
+    <article class="font-base text-gray-700 lg:mt-32 lg:row-start-1 lg:col-start-1 lg:col-end-2">
       <h2 class="color-[#FF7DB8] mt-auto pb-12 text-6xl sm:text-8xl font-bold">
         Hello!
       </h2>
