--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,185 +3,52 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="relative z-10 mb-36 block h-[calc(100vh-12rem)] bg-white">
-    <section class="bg-white dark:bg-gray-900">
-      <div class="container px-6 py-12 mx-auto">
+  <main
+    class="relative z-10 mb-36 block w-full min-h-[calc(100vh-12rem)] bg-white"
+  >
+    <section class="bg-white">
+      <div class="container font-base px-6 py-12 xl:px-24 mx-auto">
         <div class="flex flex-col-reverse lg:flex-row lg:items-center lg:-mx-6">
-          <div class="mt-8 lg:w-1/2 lg:mx-6">
+          <div class="mt-8 lg:w-2/3 lg:mx-6">
             <div
-              class="w-full px-8 py-10 mx-auto overflow-hidden bg-white rounded-lg shadow-2xl dark:bg-gray-900 lg:max-w-xl shadow-gray-300/50 dark:shadow-black/50"
+              class="w-full px-8 py-10 mx-auto overflow-hidden bg-white rounded-lg shadow-2xl lg:max-w-xl shadow-gray-300/50"
             >
-              <h1 class="text-lg font-medium text-gray-700">
-                What do you want to ask
-              </h1>
-
               <form class="mt-6">
-                <div class="flex-1">
-                  <label
-                    class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                    >Full Name</label
-                  >
-                  <input
-                    type="text"
-                    placeholder="John Doe"
-                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                  />
+                <div class="contact-form-input flex-1">
+                  <label>Full Name</label>
+                  <input type="text" placeholder="John Doe" />
                 </div>
 
-                <div class="flex-1 mt-6">
-                  <label
-                    class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                    >Email address</label
-                  >
-                  <input
-                    type="email"
-                    placeholder="johndoe@example.com"
-                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                  />
+                <div class="contact-form-input flex-1 mt-6">
+                  <label>Email Address</label>
+                  <input type="email" placeholder="johndoe@example.com" />
                 </div>
 
-                <div class="w-full mt-6">
-                  <label
-                    class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                    >Message</label
-                  >
-                  <textarea
-                    class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md md:h-48 dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                    placeholder="Message"></textarea>
+                <div class="contact-form-input w-full mt-6">
+                  <label>Message</label>
+                  <textarea class="h-32 md:h-48" placeholder="Message"
+                  ></textarea>
                 </div>
 
                 <button
-                  class="w-full px-6 py-3 mt-6 text-sm font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                  class="w-full px-6 py-3 mt-6 text-md font-bold tracking-wide text-white capitalize transition-colors duration-300 transform bg-[#FF7DB8] rounded-md hover:bg-[#b35881] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-50"
                 >
                   get in touch
                 </button>
               </form>
             </div>
           </div>
-          <div class="lg:w-1/2 lg:mx-6">
+          <div class="lg:w-1/3 lg:mx-6">
             <h1
-              class="text-2xl font-semibold text-gray-800 capitalize dark:text-white lg:text-3xl"
+              class="text-6xl lg:text-8xl font-semibold text-[#FF7DB8] capitalize"
             >
-              Contact us for <br /> more info
+              Let's <br class="hidden lg:block" /> Chat
             </h1>
 
-            <div class="mt-6 space-y-8 md:mt-8">
-              <p class="flex items-start -mx-2">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6 mx-2 text-blue-500 dark:text-blue-400"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
-                  ></path>
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                </svg>
-
-                <span
-                  class="mx-2 text-gray-700 truncate w-72 dark:text-gray-400"
-                >
-                  Cecilia Chapman 711-2880 Nulla St. Mankato Mississippi 96522
-                </span>
-              </p>
-
-              <p class="flex items-start -mx-2">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6 mx-2 text-blue-500 dark:text-blue-400"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-                  ></path>
-                </svg>
-
-                <span
-                  class="mx-2 text-gray-700 truncate w-72 dark:text-gray-400"
-                  >(257) 563-7401</span
-                >
-              </p>
-
-              <p class="flex items-start -mx-2">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6 mx-2 text-blue-500 dark:text-blue-400"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                  ></path>
-                </svg>
-
-                <span
-                  class="mx-2 text-gray-700 truncate w-72 dark:text-gray-400"
-                  >acb@example.com</span
-                >
-              </p>
-            </div>
-
             <div class="mt-6 w-80 md:mt-8">
-              <h3 class="text-gray-600 dark:text-gray-300">Follow us</h3>
-
               <div class="flex mt-4 -mx-1.5">
                 <a
-                  class="mx-1.5 dark:hover:text-blue-400 text-gray-400 transition-colors duration-300 transform hover:text-blue-500"
-                  href="#"
-                >
-                  <svg
-                    class="w-10 h-10 fill-current"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M18.6668 6.67334C18.0002 7.00001 17.3468 7.13268 16.6668 7.33334C15.9195 6.49001 14.8115 6.44334 13.7468 6.84201C12.6822 7.24068 11.9848 8.21534 12.0002 9.33334V10C9.83683 10.0553 7.91016 9.07001 6.66683 7.33334C6.66683 7.33334 3.87883 12.2887 9.3335 14.6667C8.0855 15.498 6.84083 16.0587 5.3335 16C7.53883 17.202 9.94216 17.6153 12.0228 17.0113C14.4095 16.318 16.3708 14.5293 17.1235 11.85C17.348 11.0351 17.4595 10.1932 17.4548 9.34801C17.4535 9.18201 18.4615 7.50001 18.6668 6.67268V6.67334Z"
-                    ></path>
-                  </svg>
-                </a>
-
-                <a
-                  class="mx-1.5 dark:hover:text-blue-400 text-gray-400 transition-colors duration-300 transform hover:text-blue-500"
-                  href="#"
-                >
-                  <svg
-                    class="w-8 h-8"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M15.2 8.80005C16.4731 8.80005 17.694 9.30576 18.5941 10.2059C19.4943 11.1061 20 12.327 20 13.6V19.2H16.8V13.6C16.8 13.1757 16.6315 12.7687 16.3314 12.4687C16.0313 12.1686 15.6244 12 15.2 12C14.7757 12 14.3687 12.1686 14.0687 12.4687C13.7686 12.7687 13.6 13.1757 13.6 13.6V19.2H10.4V13.6C10.4 12.327 10.9057 11.1061 11.8059 10.2059C12.7061 9.30576 13.927 8.80005 15.2 8.80005Z"
-                      fill="currentColor"></path>
-                    <path
-                      d="M7.2 9.6001H4V19.2001H7.2V9.6001Z"
-                      fill="currentColor"></path>
-                    <path
-                      d="M5.6 7.2C6.48366 7.2 7.2 6.48366 7.2 5.6C7.2 4.71634 6.48366 4 5.6 4C4.71634 4 4 4.71634 4 5.6C4 6.48366 4.71634 7.2 5.6 7.2Z"
-                      fill="currentColor"></path>
-                  </svg>
-                </a>
-
-                <a
-                  class="mx-1.5 dark:hover:text-blue-400 text-gray-400 transition-colors duration-300 transform hover:text-blue-500"
+                  class="mx-1.5 text-gray-400 transition-colors duration-300 transform hover:text-[#FF7DB8]"
                   href="#"
                 >
                   <svg
@@ -197,7 +64,7 @@ import Base from "../layouts/Base.astro";
                 </a>
 
                 <a
-                  class="mx-1.5 dark:hover:text-blue-400 text-gray-400 transition-colors duration-300 transform hover:text-blue-500"
+                  class="mx-1.5 text-gray-400 transition-colors duration-300 transform hover:text-[#FF7DB8]"
                   href="#"
                 >
                   <svg
@@ -213,9 +80,29 @@ import Base from "../layouts/Base.astro";
                 </a>
               </div>
             </div>
+
+            <div class="mt-6 space-y-8 md:mt-8">
+              <p class="flex items-start -mx-2">
+                <span
+                  class="mx-2 text-gray-700 truncate w-72"
+                  >gabrielle.a.french@gmail.com</span
+                >
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
 </Base>
+
+<style>
+  .contact-form-input label {
+    @apply block mb-2 text-sm text-gray-600;
+  }
+
+  .contact-form-input input,
+  .contact-form-input textarea {
+    @apply block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-[#ff8abf] focus:ring-[#ff8abf] focus:outline-none focus:ring focus:ring-opacity-40;
+  }
+</style>
