--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,14 +4,14 @@ import Base from "../layouts/Base.astro";
 
 <Base>
   <main
-    class="relative z-10 mb-36 block w-full min-h-[calc(100vh-12rem)] bg-white"
+    class="relative z-10 mb-36 block min-h-[calc(100vh-12rem)] w-full bg-white"
   >
     <section class="bg-white">
-      <div class="container font-base px-6 py-12 xl:px-24 mx-auto">
-        <div class="flex flex-col-reverse lg:flex-row lg:items-center lg:-mx-6">
-          <div class="mt-8 lg:w-2/3 lg:mx-6">
+      <div class="font-base container mx-auto px-6 py-12 xl:px-24">
+        <div class="flex flex-col-reverse lg:-mx-6 lg:flex-row lg:items-center">
+          <div class="mt-8 lg:mx-6 lg:w-2/3">
             <div
-              class="w-full px-8 py-10 mx-auto overflow-hidden bg-white rounded-lg shadow-2xl lg:max-w-xl shadow-gray-300/50"
+              class="mx-auto w-full overflow-hidden rounded-lg bg-white px-8 py-10 shadow-2xl shadow-gray-300/50 lg:max-w-xl"
             >
               <form class="mt-6">
                 <div class="contact-form-input flex-1">
@@ -19,40 +19,46 @@ import Base from "../layouts/Base.astro";
                   <input type="text" id="name" placeholder="John Doe" />
                 </div>
 
-                <div class="contact-form-input flex-1 mt-6">
+                <div class="contact-form-input mt-6 flex-1">
                   <label for="email">Email Address</label>
-                  <input type="email" id="email" placeholder="johndoe@example.com" />
+                  <input
+                    type="email"
+                    id="email"
+                    placeholder="johndoe@example.com"
+                  />
                 </div>
 
-                <div class="contact-form-input w-full mt-6">
+                <div class="contact-form-input mt-6 w-full">
                   <label for="message">Message</label>
-                  <textarea class="h-32 md:h-48" id="message" placeholder="Message"
-                  ></textarea>
+                  <textarea
+                    class="h-32 md:h-48"
+                    id="message"
+                    placeholder="Message"></textarea>
                 </div>
 
                 <button
-                  class="w-full px-6 py-3 mt-6 text-md font-bold tracking-wide text-white capitalize transition-colors duration-300 transform bg-[#FF7DB8] rounded-md hover:bg-[#b35881] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-50"
+                  class="text-md mt-6 w-full transform rounded-md bg-[#FF7DB8] px-6 py-3 font-bold capitalize tracking-wide text-white transition-colors duration-300 hover:bg-[#b35881] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-50"
                 >
                   get in touch
                 </button>
               </form>
             </div>
           </div>
-          <div class="lg:w-1/3 lg:mx-6">
+          <div class="lg:mx-6 lg:w-1/3">
             <h1
-              class="text-6xl lg:text-8xl font-semibold text-[#FF7DB8] capitalize"
+              class="text-6xl font-semibold capitalize text-[#FF7DB8] lg:text-8xl"
             >
               Let's <br class="hidden lg:block" /> Chat
             </h1>
 
             <div class="mt-6 w-80 md:mt-8">
-              <div class="flex mt-4 -mx-1.5">
+              <div class="-mx-1.5 mt-4 flex">
                 <a
-                  class="mx-1.5 text-gray-400 transition-colors duration-300 transform hover:text-[#FF7DB8]"
+                  class="mx-1.5 transform text-gray-400 transition-colors duration-300 hover:text-[#FF7DB8]"
                   href="#"
                 >
                   <svg
-                    class="w-8 h-8"
+                    class="h-8 w-8"
                     viewBox="0 0 24 24"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -64,11 +70,11 @@ import Base from "../layouts/Base.astro";
                 </a>
 
                 <a
-                  class="mx-1.5 text-gray-400 transition-colors duration-300 transform hover:text-[#FF7DB8]"
+                  class="mx-1.5 transform text-gray-400 transition-colors duration-300 hover:text-[#FF7DB8]"
                   href="#"
                 >
                   <svg
-                    class="w-8 h-8"
+                    class="h-8 w-8"
                     viewBox="0 0 24 24"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -82,9 +88,8 @@ import Base from "../layouts/Base.astro";
             </div>
 
             <div class="mt-6 space-y-8 md:mt-8">
-              <p class="flex items-start -mx-2">
-                <span
-                  class="mx-2 text-gray-700 truncate w-72"
+              <p class="-mx-2 flex items-start">
+                <span class="mx-2 w-72 truncate text-gray-700"
                   >gabrielle.a.french@gmail.com</span
                 >
               </p>
@@ -98,11 +103,11 @@ import Base from "../layouts/Base.astro";
 
 <style>
   .contact-form-input label {
-    @apply block mb-2 text-sm text-gray-600;
+    @apply mb-2 block text-sm text-gray-600;
   }
 
   .contact-form-input input,
   .contact-form-input textarea {
-    @apply block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-[#ff8abf] focus:ring-[#ff8abf] focus:outline-none focus:ring focus:ring-opacity-40;
+    @apply mt-2 block w-full rounded-md border border-gray-200 bg-white px-5 py-3 text-gray-700 placeholder-gray-400 focus:border-[#ff8abf] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-40;
   }
 </style>
