update FE contact form logic

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,6 @@ import Base from "../layouts/Base.astro";
 <script
   is:inline
   src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=initTurnstile"
-  async
   defer></script>
 
 <Base>
@@ -17,7 +16,7 @@ import Base from "../layouts/Base.astro";
             <div
               class="mx-auto w-full overflow-hidden rounded-lg bg-white px-8 py-10 shadow-2xl shadow-gray-300/50 lg:max-w-xl"
             >
-              <form class="mt-6">
+              <form class="mt-6" id="contact-form">
                 <div class="contact-form-input flex-1">
                   <label for="name">Full Name</label>
                   <input type="text" id="name" placeholder="John Doe" />
@@ -48,8 +47,13 @@ import Base from "../layouts/Base.astro";
                 >
                 </div>
 
+                <span id="contact-form-errors" class="text-red-600 hidden pt-6"
+                ></span>
+
                 <button
-                  class="text-md mt-6 w-full transform rounded-md bg-[#FF7DB8] px-6 py-3 font-bold capitalize tracking-wide text-white transition-colors duration-300 hover:bg-[#b35881] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-50"
+                  id="form-submit"
+                  class="text-md mt-6 w-full transform rounded-md px-6 py-3 font-bold capitalize tracking-wide text-white transition-colors duration-300 focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-50"
+                  type="submit"
                 >
                   get in touch
                 </button>
@@ -114,11 +118,19 @@ import Base from "../layouts/Base.astro";
 </Base>
 
 <script is:inline>
+  const contactFormErrorsElement = document.querySelector("#contact-form-errors");
+
   function initTurnstile() {
     let turnstileActive = false;
 
-    document.querySelectorAll(".contact-form-input input").forEach((elem) => {
+    // prettier-ignore
+    document.querySelectorAll(".contact-form-input input, .contact-form-input textarea").forEach((elem) => {
       elem.addEventListener("focus", (e) => {
+        contactFormErrorsElement.classList.remove("block");
+        contactFormErrorsElement.classList.add("hidden");
+        contactFormErrorsElement.innerHTML = "";
+
+        if (turnstileActive) return;
         const cfTurnstile = document.querySelector(".cf-turnstile");
         cfTurnstile.classList.remove("hidden");
         cfTurnstile.classList.add("flex");
@@ -130,6 +142,35 @@ import Base from "../layouts/Base.astro";
   }
 </script>
 
+<script>
+  import { validateContactFormInput } from "../lib/clientContactForm";
+  
+  declare const turnstile: any;
+  declare const contactFormErrorsElement: HTMLSpanElement;
+  
+  document.querySelector("#contact-form")!.addEventListener("submit", (e) => {
+    e.preventDefault();
+    const name = (document.querySelector("#name") as HTMLInputElement).value;
+    const email = (document.querySelector("#email") as HTMLInputElement).value;
+    // prettier-ignore
+    const message = (document.querySelector("#message") as HTMLInputElement).value;
+    const contactFormErrors = validateContactFormInput({
+      name,
+      email,
+      message,
+    });
+
+    if (contactFormErrors.length > 0) {
+      turnstile.reset();
+      turnstile.execute(document.querySelector(".cf-turnstile"));
+      contactFormErrorsElement.innerHTML = contactFormErrors.join(",");
+      contactFormErrorsElement.classList.remove("hidden");
+      contactFormErrorsElement.classList.add("block");
+      return;
+    }
+  });
+</script>
+
 <style>
   .contact-form-input label {
     @apply mb-2 block text-sm text-gray-600;
@@ -138,5 +179,10 @@ import Base from "../layouts/Base.astro";
   .contact-form-input input,
   .contact-form-input textarea {
     @apply mt-2 block w-full rounded-md border border-gray-200 bg-white px-5 py-3 text-gray-700 placeholder-gray-400 focus:border-[#ff8abf] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-40;
+  }
+
+  /* adds higher specificity to override unocss reset, which makes background transparent  */
+  #form-submit {
+    @apply bg-[#FF7DB8] hover:bg-[#b35881];
   }
 </style>
